fixed spacing for different size screens and removed text on ipod screen

--- a/client/css/IPodGraphic.css
+++ b/client/css/IPodGraphic.css
@@ -4,7 +4,7 @@ body {background-color: #2e2e2e;}
   width: 300px;
   height: 500px;
   background: #cccccc;
-  margin: 40px auto;
+  margin: 30px auto;
   /*radius*/
   -webkit-border-radius: 30px;
      -moz-border-radius: 30px;
@@ -14,7 +14,7 @@ body {background-color: #2e2e2e;}
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.4);
      -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.4);
           box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.4);
-  margin-top: 80px;
+  /* margin-top: 40px; */
 }
 
 .main {
@@ -231,8 +231,3 @@ img.play-pause:hover {
           box-shadow: inset 0px -2px 14px -1px rgba(0,0,0,0.3);
 }
 
-@media screen and (max-width: 800px) {
-  .back-cover {
-    margin-top: 0;
-  }
-}
