--- a/client/css/search.css
+++ b/client/css/search.css
@@ -1,12 +1,13 @@
 
 .search {
   width: auto;
-  height: auto;
+  height: 85vh;
   padding: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: scroll;
 }
 
 .infoIcon {
@@ -35,17 +36,16 @@
 
 .now-playing {
   font-family: 'Caveat Brush', cursive;
-  font-size: 30px;
-  height: 55px;
-  position: absolute;
-  top: 120px; 
+  font-size: 25px;
+  height: auto;
+  position: relative;
+  /* top: 120px;  */
+  margin: 5px;
+  text-align: center;
 }
 
-@media screen and (max-width: 200px) {
-  .now-playing {
-    top: 0;
-  }
-  .search {
-    background-color: blue;
-  }
+/* this make the scrollbar from overflow stay hidden */
+.search::-webkit-scrollbar {
+  display: none;
 }
+
